# gitpub

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  oauth.html
src/: cli.rs  git.rs  lib.rs  main.rs
src/provider/: azure.rs  bitbucket.rs  github.rs  gitlab.rs  mod.rs
