[package]
name = "gitpub"
version = "0.4.2"
authors = ["Logan Saso <logansaso+tech@gmail.com>"]
description = "A CLI app to create remote git repositories."
repository = "https://github.com/loganintech/gitpub"
readme = "README.md"
keywords = ["git", "cli"]
categories = ["command-line-utilities"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
reqwest = "0.9.16"
serde = { version = "1.0.91", features = [ "derive" ] }
serde_json = "1.0.39"
clap = "2.33.0"
base64 = "0.10.1"
